objects/BMCServiceDesk__BMC_Rack__c.object
<CustomObject>
    <description>BMC_Rack. CMDB Class that stores information about hardware rack components, which hold other hardware components within a system. This class corresponds to the DMTF CIM_Rack class.</description>
    <fields>
        <fullName>BMCServiceDesk__Height__c</fullName>
        <label>Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type_of_Rack__c</fullName>
        <label>Type of Rack</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard 19 Inch</fullName>
                </value>
                <value>
                    <fullName>Telco</fullName>
                </value>
                <value>
                    <fullName>Equipment Shelf</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rack</label>
    <nameField>
        <label>Rack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>